fix: Fixed proper css display on new writeups

--- a/writeups/ctf/0xfun/0xfun-lookup.html
+++ b/writeups/ctf/0xfun/0xfun-lookup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>voidwr - OxFun - Lookup</title>
-  <link rel="stylesheet" href="/staging/assets/css/writeups.css">
+  <link rel="stylesheet" href="/assets/css/writeups.css">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
   <div class="writeup-body">
     <h2>Overview</h2>
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Lookup-OSINT/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Lookup-OSINT/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
     </div>
     <p>Lookup was a fairly easy OSINT challenge that required leveraging DNS records.</p>
 
@@ -58,7 +58,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Lookup-OSINT/flag.png" alt="Exploitation Step" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Lookup-OSINT/flag.png" alt="Exploitation Step" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Flag: <strong>0xfun{4ny_1nfo_th4ts_pub1cly_4cc3ss1bl3_1s_0S1NT}</strong></p>
     </div>
 
@@ -79,7 +79,7 @@
 </section>
  
 
-<script src="/staging/assets/js/main.js"></script>
-<script src="/staging/assets/js/writeups.js"></script>
+<script src="/assets/js/main.js"></script>
+<script src="/assets/js/writeups.js"></script>
 </body>
 </html>
