--- a/writeups/ctf/0xfun/0xfun-perceptions.html
+++ b/writeups/ctf/0xfun/0xfun-perceptions.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>voidwr - OxFun - Perceptions</title>
-  <link rel="stylesheet" href="/staging/assets/css/writeups.css">
+  <link rel="stylesheet" href="/assets/css/writeups.css">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
   <div class="writeup-body">
     <h2>Overview</h2>
     <div class="writeup-banner-full-width">
-      <img src="/staging/writeups/ctf/0xfun/media/Perceptions-web/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
+      <img src="/writeups/ctf/0xfun/media/Perceptions-web/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
     </div>
     <p>
       Perceptions was an easy web challenge that costed 150 pts at the time of completion. 
@@ -61,7 +61,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Perceptions-web/webpage_initial.png" alt="Initial View" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Perceptions-web/webpage_initial.png" alt="Initial View" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 1: Initial view of the blog page.</p>
     </div>
 
@@ -71,7 +71,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Perceptions-web/myserver.png" alt="My Server Page" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Perceptions-web/myserver.png" alt="My Server Page" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 2: My Server page.</p>
     </div>
 
@@ -91,7 +91,7 @@
     </p>  
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Perceptions-web/secret.png" alt="Secret Post Page" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Perceptions-web/secret.png" alt="Secret Post Page" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 3: Secret Post page.</p>
     </div>
 
@@ -103,7 +103,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Perceptions-web/html_comment_found_secret.png" alt="HTML Comment Found Secret" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Perceptions-web/html_comment_found_secret.png" alt="HTML Comment Found Secret" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 4: HTML comment found secret.</p>
     </div>
 
@@ -114,7 +114,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Perceptions-web/ssh_charlie.PNG" alt="SSH Login" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Perceptions-web/ssh_charlie.PNG" alt="SSH Login" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 5: SSH login.</p>
     </div>
 
@@ -124,7 +124,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Perceptions-web/flag.png" alt="flag" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Perceptions-web/flag.png" alt="flag" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 6: Flag: <strong>0xfun{p3rsp3c71v3.15.k3y}</strong></p>
     </div>
 
@@ -134,7 +134,7 @@
 </section>
  
 
-<script src="/staging/assets/js/main.js"></script>
-<script src="/staging/assets/js/writeups.js"></script>
+<script src="/assets/js/main.js"></script>
+<script src="/assets/js/writeups.js"></script>
 </body>
 </html>
