--- a/writeups/ctf/0xfun/0xfun-shell.html
+++ b/writeups/ctf/0xfun/0xfun-shell.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>voidwr - OxFun - Shell</title>
-  <link rel="stylesheet" href="/staging/assets/css/writeups.css">
+  <link rel="stylesheet" href="/assets/css/writeups.css">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
   <div class="writeup-body">
     <h2>Overview</h2>
     <div class="writeup-banner-full-width">
-      <img src="/staging/writeups/ctf/0xfun/media/Shell-web/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
+      <img src="/writeups/ctf/0xfun/media/Shell-web/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
     </div>
     <p>
       Shell was one of those challenges that remind you 
@@ -63,7 +63,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Shell-web/web-page.png" alt="Initial View" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Shell-web/web-page.png" alt="Initial View" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 1: Initial view of the web app.</p>
     </div>
 
@@ -90,7 +90,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Shell-web/initial.png" alt="Initial Picture" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Shell-web/initial.png" alt="Initial Picture" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 2: Picture Upload.</p>
     </div>
 
@@ -127,12 +127,12 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Shell-web/exploit_find_grep_flag.png" alt="Exploit" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Shell-web/exploit_find_grep_flag.png" alt="Exploit" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 3: Exploit.</p>
     </div>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Shell-web/exploit_find_grep_flag_output.png" alt="Exploit Output" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Shell-web/exploit_find_grep_flag_output.png" alt="Exploit Output" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 4: Exploit Output.</p>
     </div>
     
@@ -143,12 +143,12 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Shell-web/cat_flag.png" alt="Cat Flag" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Shell-web/cat_flag.png" alt="Cat Flag" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 5: Cat Flag.</p>
     </div>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Shell-web/cat_flag_output.png" alt="Cat Flag Output" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Shell-web/cat_flag_output.png" alt="Cat Flag Output" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Flag: <strong>0xfun{h1dd3n_p4yl04d_1n_pl41n_51gh7}</strong>.</p>
     </div>
     
@@ -178,7 +178,7 @@
 </section>
  
 
-<script src="/staging/assets/js/main.js"></script>
-<script src="/staging/assets/js/writeups.js"></script>
+<script src="/assets/js/main.js"></script>
+<script src="/assets/js/writeups.js"></script>
 </body>
 </html>
