--- a/writeups/ctf/0xfun/0xfun-templates.html
+++ b/writeups/ctf/0xfun/0xfun-templates.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>voidwr - OxFun - Templates</title>
-  <link rel="stylesheet" href="/staging/assets/css/writeups.css">
+  <link rel="stylesheet" href="/assets/css/writeups.css">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
   <div class="writeup-body">
     <h2>Overview</h2>
     <div class="writeup-banner-full-width">
-      <img src="/staging/writeups/ctf/0xfun/media/Templates-web/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
+      <img src="/writeups/ctf/0xfun/media/Templates-web/prompt.png" alt="Prompt" class="writeup-banner-link" onclick="openImageModal(this)">
     </div>
     <p>
       Templates was a web challenge that was meant to be solved with a 
@@ -60,7 +60,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Templates-web/website.png" alt="Initial View" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Templates-web/website.png" alt="Initial View" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 1: Initial view of the web app.</p>
     </div>
 
@@ -74,12 +74,12 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Templates-web/vuln_found.PNG" alt="SSTI Test" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Templates-web/vuln_found.PNG" alt="SSTI Test" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 2.1: SSTI Test.</p>
     </div>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Templates-web/vuln_found2.PNG" alt="SSTI Test" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Templates-web/vuln_found2.PNG" alt="SSTI Test" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 2.2: SSTI Test.</p>
     </div>
 
@@ -107,7 +107,7 @@
     </p>
 
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Templates-web/ls_la.png" alt="LS Output" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Templates-web/ls_la.png" alt="LS Output" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Figure 3: LS Output.</p>
     </div>
 
@@ -132,7 +132,7 @@
       </code>
     </pre>
     <div class="gallery-item">
-        <img src="/staging/writeups/ctf/0xfun/media/Templates-web/flag.png" alt="Flag" class="gallery-image" onclick="openImageModal(this)">
+        <img src="/writeups/ctf/0xfun/media/Templates-web/flag.png" alt="Flag" class="gallery-image" onclick="openImageModal(this)">
         <p class="image-caption">Flag: <strong>0xfun{Server_Side_Template_Injection_Awesome}</strong>.</p>
     </div>
     
@@ -156,7 +156,7 @@
 </section>
  
 
-<script src="/staging/assets/js/main.js"></script>
-<script src="/staging/assets/js/writeups.js"></script>
+<script src="/assets/js/main.js"></script>
+<script src="/assets/js/writeups.js"></script>
 </body>
 </html>
